[package]
name = "heim-runtime"
version = "0.0.2"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Runtime shims for heim crate"
keywords = ["heim", "runtime", "shim", "sync"]
categories = ["asynchronous", "os", "api-bindings"]
repository = "https://github.com/heim-rs/heim"
license = "Apache-2.0 OR MIT"

[dependencies]
heim-common = { version = "0.0.6", path = "../heim-common" }
cfg-if = "0.1.9"

# `runtime-polyfill` feature dependencies
threadpool = { version = "1.7.1", optional = true }
lazy_static = { version = "1.3.0", optional = true }
futures-preview = { version = "0.3.0-alpha.17", optional = true }

# `runtime-tokio` feature dependencies
tokio = { version = "0.2.0-alpha.1", optional = true }
# TODO: `tokio_fs::DirEntry` is not re-exported by a `tokio` crate
tokio-fs = { version = "0.2.0-alpha.1", optional = true }

[dev-dependencies]
version-sync = "0.8"

[features]
default = ["runtime-polyfill"]
runtime-polyfill = ["threadpool", "lazy_static", "futures-preview"]
runtime-tokio = ["tokio", "tokio-fs"]
