[package]
name = "heim"
version = "0.0.6"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Cross-platform framework for system information"
keywords = ["heim", "system", "information", "sysinfo", "psutil"]
categories = ["asynchronous", "os", "api-bindings"]
repository = "https://github.com/heim-rs/heim"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[badges]
maintenance = { status = "experimental" }
azure-devops = { project = "heim-rs/heim", pipeline = "heim-rs.heim" }

[dependencies]
heim-common = { version = "0.0.6", path = "../heim-common" }
heim-derive = { version = "0.0.6", path = "../heim-derive" }
heim-runtime = { version = "0.0.2", path = "../heim-runtime", default-features = false }
heim-cpu = {version = "0.0.6", path = "../heim-cpu", default-features = false }
heim-disk = {version = "0.0.6", path = "../heim-disk", default-features = false }
heim-host = { version = "0.0.6", path = "../heim-host", default-features = false }
heim-memory = {version = "0.0.6", path = "../heim-memory", default-features = false }
heim-net = {version = "0.0.6", path = "../heim-net", default-features = false }
heim-process = { version = "0.0.6", path = "../heim-process", default-features = false }
heim-virt = { version = "0.0.6", path = "../heim-virt", default-features = false }

[dev-dependencies]
version-sync = "0.8"

[features]
default = ["runtime-polyfill"]

# Reactors
runtime-polyfill = [
    "heim-runtime/runtime-polyfill",
    "heim-cpu/runtime-polyfill",
    "heim-disk/runtime-polyfill",
    "heim-host/runtime-polyfill",
    "heim-memory/runtime-polyfill",
    "heim-net/runtime-polyfill",
    "heim-process/runtime-polyfill",
    "heim-virt/runtime-polyfill",
]
runtime-tokio = [
    "heim-runtime/runtime-tokio",
    "heim-cpu/runtime-tokio",
    "heim-disk/runtime-tokio",
    "heim-host/runtime-tokio",
    "heim-memory/runtime-tokio",
    "heim-net/runtime-tokio",
    "heim-process/runtime-tokio",
    "heim-virt/runtime-tokio",
]
